# eq10q

./: CMakeLists.txt  CodingStandar.txt  README  bassup.c  dynamics.c  eq.c  eq10q_code.kdev4  midside_matrix.c  plugins_uris.h  uris.h
aux_tools/: ReleaseChecklist.ods  coef_tester.c  dbLut_Tester.cpp  dbLut_generator.cpp  fastMath_Tester.cpp
dsp/: CMakeLists.txt  db.h  dblut.h  fastmath.h  filter.c  filter.h  midside.h  param_interpolator.h  vu.c  vu.h
gui/: CMakeLists.txt  bassup_ui.cpp  dyn_ui.cpp  eq10q_ui.cpp  eq_defines.h  guitester.cpp  guitester.h  main.cpp  midside_ui.cpp
gui/.kdev4/: gui.kdev4
gui/icons/: logobassup.xcf  logodynamics.xcf  logoeq10q.xcf
gui/knobs/: mixer_knob.xcf
gui/widgets/: CMakeLists.txt  PathConfig.h  abbutton.cpp  abbutton.h  bandctl.cpp  bandctl.h  bassupwindow.cpp  bassupwindow.h  bodeplot.cpp  bodeplot.h  button.cpp  button.h  colors.h  dynamicswindow.cpp  dynamicswindow.h  dynplot.cpp  dynplot.h  eqparams.cpp  eqparams.h  eqwindow.cpp  eqwindow.h  faderwidget.cpp  faderwidget.h  filter.cpp  filter.h  guiconstants.h  knob2.cpp  knob2.h  mainwidget.cpp  mainwidget.h  midsidewindow.cpp  midsidewindow.h  pixmapcombo.cpp  pixmapcombo.h  setwidgetcolors.cpp  setwidgetcolors.h  sidechainbox.cpp  sidechainbox.h  templatewidget.cpp  templatewidget.h  (+4 more)
